--- a/.github/workflows/update-data.yml
+++ b/.github/workflows/update-data.yml
@@ -18,14 +18,16 @@ jobs:
           fetch-depth: 0  
 
       - name: Setup Node.js
-      - name: actions/setup-node@v4
+        uses: actions/setup-node@v4
         with:
             node-version: 18
 
       - name: Run update script
-        uses: node main.js
+        uses: node docs/api/main.js
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          REPO_OWNER: Doorway-Test
+          REPO_NAME: Doorway
 
       - name: Commit and push changes
         uses: stefanzweifel/git-auto-commit-action@v5
